# FloriBot_Pi

./: README.md
src/: base_test_floribot.py
src/base/: CMakeLists.txt  base_test_floribot.py  package.xml
src/base/include/base/: hardware_node.hpp  kinematics_calculator.h  kinematics_node.h  pid_controller.h  sensor_aggregator_node.h  wheel_controller_node.h
src/base/launch/: base_launch.py  debug_launch.py
src/base/msg/: WheelControllerState.msg  WheelTicks4.msg
src/base/params/: hardware_params.yaml  kinematics_params.yaml  wheel_params.yaml
src/base/src/nodes/: hardware_node  hardware_node.cpp  kinematics_node.cpp  sensor_aggregator_node.cpp  wheel_controller_node.cpp
src/web_teleop/: package.xml  setup.py  web_teleop_server.py
src/web_teleop/launch/: web_teleop.launch.py
src/web_teleop/resource/: web_teleop
src/web_teleop/web_teleop/: web_teleop_server.py
src/web_teleop/web_teleop/static/: index.html
