<?xml version="1.0"?>
<package format="3">
  <name>base</name>
  <version>0.1.0</version>
  <description>FloriBot 4-wheel diff-drive base (kinematics + per-wheel PID hardware control)</description>
  <maintainer email="noreply@example.com">FloriBot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
